# Reox

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  Timeline.md  all.md  architecture.md  reox-spec.md  structure.rx
reox-lang/: Cargo.toml
reox-lang/benchmarks/: fib.c  fib.rs  fib.rx  fib_c  fib_reox  fib_reox.c  fib_rust  run_benchmark.sh
reox-lang/examples/: animation_demo  animation_demo.c  animation_demo.reox  bridge_demo  bridge_demo.c  display_settings  display_settings.c  display_settings.rx  state_diff_demo  state_diff_demo.c  system_monitor  system_monitor.c  system_monitor.reox
reox-lang/runtime/: Makefile  reox_accessibility.h  reox_anim_flow.h  reox_animation.c  reox_animation.h  reox_backend_sdl.c  reox_color_system.c  reox_color_system.h  reox_colorpicker.c  reox_colorpicker.h  reox_cpp.hpp  reox_desktop.c  reox_desktop.h  reox_display.c  reox_display.h  reox_ffi.c  reox_ffi.h  reox_forms.h  reox_gestures.h  reox_grid.h  reox_image_system.h  reox_lighting.h  reox_nxrender_bridge.h  reox_nxrender_stdlib.h  reox_project.c  reox_project.h  reox_runtime.c  reox_runtime.h  reox_sdl_visual.c  reox_slider.c  reox_slider.h  reox_state.h  reox_system_stdlib.h  reox_theme.c  reox_theme.h  reox_transition_stdlib.h  reox_transitions.c  reox_transitions.h  reox_ui.c  reox_ui.h  (+2 more)
reox-lang/src/: cli.rs  lib.rs  main.rs
reox-lang/stdlib/: gesture.reox  network.rx  nxrender.rx  prelude.rx  system.rx  transition.rx  ui.rx
reox-lang/tests/: ai_test.reox  animation_visual_test.c  animation_visual_test.reox  calc.c  calc.rx  container_test.reox  hello.rx  (+13 more)
(+61 files in other folders)
