[package]
name = "reoxc"
version = "0.1.0"
edition = "2021"
description = "REOX Language Compiler for NeolyxOS"
authors = ["NeolyxOS Team"]
license = "Proprietary"

# Zero external dependencies - all self-built for stability
[dependencies]

[[bin]]
name = "reoxc"
path = "src/main.rs"

[lib]
name = "reoxc"
path = "src/lib.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
