[package]
name = "reoxc"
version = "0.5.0-beta"
edition = "2021"
description = "REOX Language Compiler for NeolyxOS"
authors = ["NeolyxOS Team"]
license = "Proprietary"

# Zero external dependencies - all self-built for stability
# Exception made for AI runtime support (dev mode)
[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "reoxc"
path = "src/main.rs"

[lib]
name = "reoxc"
path = "src/lib.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
